# videocode

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPEC.md  claude-config.example.json  demo.py  demo_full.py  demo_ollama.py  demo_simple.py  pyproject.toml  setup-complete.sh  setup.sh  test_mcp.py
.github/workflows/: ci.yml
demo_output/: README.md
docs/: architecture.md  configuration.md  tutorials.md
src/videocode/: __init__.py  agent_loop.py  apify_client.py  audio_extractor.py  cli.py  code_extractor.py  config.py  frame_selector.py  mcp_server.py  perplexity_client.py  repo_finder.py  types.py  video_processor.py  vlm_client.py
tests/: test_agent_loop.py  test_cli.py  test_code_extractor.py  test_config.py  test_frame_selector.py  test_mcp_server.py  test_repo_finder.py  test_video_processor.py  test_vlm_client.py
