[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videocode"
version = "0.1.0"
description = "Give Claude Code eyes — turn coding videos into working code via MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "videocode Contributors"}
]
keywords = ["claude-code", "mcp", "video-understanding", "vision-language-model", "ai-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
    "pillow>=10.0",
    "opencv-python>=4.9.0",
    "scenedetect>=0.6.0",
    "faster-whisper>=1.0.0",
    "ollama>=0.1.0",
    "openai>=1.0",
    "google-generativeai>=0.5",
    "mcp>=1.0.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
]

[project.scripts]
videocode = "videocode.cli:app"

[project.urls]
Homepage = "https://github.com/videocode/videocode"
Repository = "https://github.com/videocode/videocode"
Issues = "https://github.com/videocode/videocode/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]
